# simple-experiment-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/simple_experiment_manager/: __init__.py  config_cls_test.py  manager.py
src/simple_experiment_manager/api/: experiment.py  index.py  label.py
src/simple_experiment_manager/cli/: editor.py  experiment.py  label.py  utils.py
src/simple_experiment_manager/examples/: sample_cli.py  sample_script.py
src/simple_experiment_manager/io/: handlers.py  json_handler.py  yaml_handler.py
src/simple_experiment_manager/schemas/: contexts.py  index.py  requests.py  responses.py  validators.py
tests/: conftest.py  test_manager.py
